--- a/project-template/static/index.html
+++ b/project-template/static/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <title>Mock Views</title>
 </head>
+<style>
+</style>
 
 <body>
     <ul>
-        <li><a href="/view01.html">View 01</a></li>
+    	<a href="/view01.html" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Login</a>
         <li><a href="/view02.html">View 02</a></li>
         <li><a href="/view03.html">View 03</a></li>
     </ul>
