--- a/project-template/static/index.html
+++ b/project-template/static/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8" />
+<title>Trippin Login</title>
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 input[type=text], input[type=password] 
@@ -57,7 +58,6 @@ span.psw
 
 <form>
      <div class="userimage"></div>
- 
 
   <div class="container">
     <label for="uname"><b>Username</b></label>
