--- a/project-template/static/index.html
+++ b/project-template/static/index.html
@@ -68,6 +68,7 @@ span.psw
         
    <div class="login">
     <a href="/view01.html">Login</a>
+    <a href="/view01.html">Sign Up</a>
   </div>
     </div>
 </form>
