--- a/project-template/static/index.html
+++ b/project-template/static/index.html
@@ -69,6 +69,9 @@ span.psw
    <div class="login">
     <a href="/view01.html">Login</a>
     <a href="/view01.html">Sign Up</a>
+    <br>
+    <br>
+    <a href="/view01.html">Forgot Password</a>
   </div>
     </div>
 </form>
