--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -14,14 +14,20 @@
 
 <body>
     <!-- this is where our component will appear -->
+   
+  <div id="signup"></div>
+
     <div id="contents"></div>
     <ul>
        <li><a href="/view02.html">view2</a></li>
        <li><a href="/view03.html">view3</a></li>
     </ul>
+
     <script src="/App01.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 </body>
 
 </html>
+
+
