--- a/project-template/static/index.html
+++ b/project-template/static/index.html
@@ -3,78 +3,12 @@
 <head>
 <meta charset="UTF-8" />
 <title>Trippin Login</title>
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-input[type=text], input[type=password] 
-{
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-.login
-{
-  border: 2px solid black; 
-  font-size: 18px;
-  padding: 14px 20px;
-  margin: center;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  text-align: center
-}
-
-.userimage
-{
-    background-color: #fff;
-    border: 2px solid black;    
-    width: 150px;
-    height: 150px;
-    border-radius: 50%; 
-    margin: auto;
-    text-align: center;
-
-}
-
-.container 
-{
-  padding: 16px;
-}
-
-span.psw 
-{
-  float: right;
-  padding-top: 16px;
-}
-
-</style>
-</head>
-<body>
-
-<h2 style="text-align: center">Login Form</h2>
-
-<form>
-     <div class="userimage"></div>
-
-  <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-        
-   <div class="login">
-    <a href="/view01.html">Login</a>
-    <a href="/view01.html">Sign Up</a>
-    <br>
-    <br>
-    <a href="/view01.html">Forgot Password</a>
-  </div>
-    </div>
-</form>
+</body>
+<ul>
+       <li><a href="/view01.html">view1</a></li>
+       <li><a href="/view02.html">view2</a></li>
+       <li><a href="/view03.html">view3</a></li>
+  </ul>
 
 </body>
 </html>
