--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -4,6 +4,60 @@
 <head>
     <meta charset="UTF-8" />
     <title>Sign Up</title>
+    <title>Trippin Login</title>
+<style>
+	body {font-family: Arial, Helvetica, sans-serif;}
+	input[type=text], input[type=password] 
+	{
+	  width: 100%;
+	  padding: 12px 20px;
+	  margin: 8px 0;
+	  display: inline-block;
+	  border: 1px solid #ccc;
+	  box-sizing: border-box;
+	}
+
+	.options
+	{
+	  border: 2px solid black; 
+	  font-size: 18px;
+	  padding: 14px 20px;
+	  margin: center;
+	  border: none;
+	  cursor: pointer;
+	  width: 100%;
+	  text-align: center
+	}
+
+	.userimage
+	{
+	    background-color: #fff;
+	    border: 2px solid black;    
+	    width: 150px;
+	    height: 150px;
+	    border-radius: 50%; 
+	    margin: auto;
+	    text-align: center;
+
+	}
+
+	.container 
+	{
+	  padding: 16px;
+	}
+
+	span.psw 
+	{
+	  float: right;
+	  padding-top: 16px;
+	}
+
+	h1
+	{
+		text-align: center;
+	}
+
+</style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js">
     </script>
@@ -15,14 +69,18 @@
 <body>
     <!-- this is where our component will appear -->
    
-  <div id="signup"></div>
-
+ 
     <div id="contents"></div>
-    <ul>
-       <li><a href="/view02.html">view2</a></li>
-       <li><a href="/view03.html">view3</a></li>
-    </ul>
+	<div class="container">
+		<div class="userimage"></div>
+    	<div id="login"></div>
+    	
+    	<div class="options">
+		    <div id="signup" style="text-align: center"></div>
+		</div>
+	</div>
 
+   
     <script src="/App01.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
