--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -5,29 +5,57 @@
     <meta charset="UTF-8" />
     <title>Sign Up</title>
     <title>Trippin Login</title>
-<style>
-	body {font-family: Arial, Helvetica, sans-serif;}
+<style>	
 	input[type=text], input[type=password] 
-	{
-	  width: 100%;
-	  padding: 12px 20px;
-	  margin: 8px 0;
-	  display: inline-block;
-	  border: 1px solid #ccc;
-	  box-sizing: border-box;
-	}
 
-	.options
-	{
-	  border: 2px solid black; 
-	  font-size: 18px;
-	  padding: 14px 20px;
-	  margin: center;
-	  border: none;
-	  cursor: pointer;
-	  width: 100%;
-	  text-align: center
-	}
+		body
+		{
+			width:100%;
+			height:700px;
+			margin:0;
+			padding:0;
+		}
+
+		h1
+		{
+			text-align: center;
+		}
+
+		#contents > div
+		{
+			width:500px;
+			margin:auto;
+			margin-top:5%;
+		}
+
+		#signup,#login 
+		{
+			width:100%;
+			height:250px;
+			background:#2c3e50;
+		}
+
+		#signup{height:$height;} 
+		#login{height:$height / 2;}
+
+		#buttons{height:100px;background:#2c3e50; border: black 3px;}
+		#buttons > p {width:49.95%;float:left;color:white;text-align:center;padding-top:25px;height:75%;margin:0;}
+		#buttons > p:hover{background:white;color:#2c3e50;cursor:pointer;}
+		
+		#signup > input, #signup > button
+		{
+			margin-top:20px;
+			margin-left:105px;
+			height:25px;
+			border:none;
+			border-radius:2px;
+		}
+		
+		#name,#email, #confirm, #password{
+			width:250px;
+		}
+		
+		#login > #email,#login > #password,#login >button{width:250px;margin-left:125px !important;margin-top:20px;height:25px;}
 
 	.userimage
 	{
@@ -39,22 +67,6 @@
 	    margin: auto;
 	    text-align: center;
 
-	}
-
-	.container 
-	{
-	  padding: 16px;
-	}
-
-	span.psw 
-	{
-	  float: right;
-	  padding-top: 16px;
-	}
-
-	h1
-	{
-		text-align: center;
 	}
 
 </style>
@@ -69,16 +81,11 @@
 <body>
     <!-- this is where our component will appear -->
    
- 
-    <div id="contents"></div>
-	<div class="container">
+   <h1>Welcome to Trippen</h1>
+   <br>
 		<div class="userimage"></div>
-    	<div id="login"></div>
+    		 <div id="contents"></div>
     	
-    	<div class="options">
-		    <div id="signup" style="text-align: center"></div>
-		</div>
-	</div>
 
    
     <script src="/App01.js"></script>
