--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
     <meta charset="UTF-8" />
     <title>Sign Up</title>
@@ -8,54 +7,82 @@
 <style>	
 	input[type=text], input[type=password] 
 
-		body
-		{
-			width:100%;
-			height:700px;
-			margin:0;
-			padding:0;
-		}
+	body
+	{
+		width:100%;
+		height:700px;
+		margin:0;
+	}
 
-		h1
-		{
-			text-align: center;
-		}
+	h1 
+	{
+		text-align: center;
+	}
 
-		#contents > div
-		{
-			width:500px;
-			margin:auto;
-			margin-top:5%;
-		}
+	p
+	{
+	  text-align: center;
+	}
 
-		#signup,#login 
-		{
-			width:100%;
-			height:250px;
-			background:#2c3e50;
-		}
+	#contents > div
+	{
+		width:500px;
+		margin:auto;
+		margin-top:5%;
+	}
 
-		#signup{height:$height;} 
-		#login{height:$height / 2;}
-
-		#buttons{height:100px;background:#2c3e50; border: black 3px;}
-		#buttons > p {width:49.95%;float:left;color:white;text-align:center;padding-top:25px;height:75%;margin:0;}
-		#buttons > p:hover{background:white;color:#2c3e50;cursor:pointer;}
+	#signup,#login 
+	{
+		width:100%;
+		height:250px;
 		
-		#signup > input, #signup > button
-		{
-			margin-top:20px;
-			margin-left:105px;
-			height:25px;
-			border:none;
-			border-radius:2px;
-		}
+	}
+
+	#signup{height:$height;} 
+	
+	#login{height:$height / 2;}
+
+	#buttons
+	{
+		height:65px;
+	}
+
+	#buttons > button 
+	{
+		width:49.95%;
+		float:left;
+		color: black;
+		text-align:center;
+		height:75%;
+		margin:0;
+
+	}
+
+	#buttons > button:hover
+	{
+		background:white;
+		cursor:pointer;
+	}
 		
-		#name,#email, #confirm, #password{
-			width:250px;
-		}
+	#signup > input, #signup > button
+	{
+		margin-top:20px;
+		margin-left:105px;
+		height:25px;
+	}
 		
-		#login > #email,#login > #password,#login >button{width:250px;margin-left:125px !important;margin-top:20px;height:25px;}
+	#name,#email, #confirm, #password
+	{
+		width:250px;
+	}
+		
+	#login > #email,#login > #password,#login >button
+	{
+		width:250px;
+		margin-left:125px;
+		margin-top:20px;
+		height:25px;
+	}
 
 	.userimage
 	{
