--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -7,21 +7,10 @@
 <style>	
 	input[type=text], input[type=password] 
 
-	body
-	{
+	body{
 		width:100%;
 		height:700px;
 		margin:0;
-	}
-
-	h1 
-	{
-		text-align: center;
-	}
-
-	p
-	{
-	  text-align: center;
 	}
 
 	#contents > div
@@ -108,7 +97,7 @@
 <body>
     <!-- this is where our component will appear -->
    
-   <h1>Welcome to Trippen</h1>
+   <h1 style="text-align: center">Welcome to Trippen</h1>
    <br>
 		<div class="userimage"></div>
     		 <div id="contents"></div>
