--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -97,7 +97,7 @@
 <body>
     <!-- this is where our component will appear -->
    
-   <h1 style="text-align: center">Welcome to Trippen</h1>
+   <h1 style="text-align: center">Welcome to Trippin</h1>
    <br>
 		<div class="userimage"></div>
     		 <div id="contents"></div>
