--- a/project-template/static/view03.html
+++ b/project-template/static/view03.html
@@ -1,51 +1,84 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
     <meta charset="UTF-8" />
+    <title>View Event</title>
     <title>Create Event</title>
-    <title>Trippin Create Event</title>
-<style>
-	body {font-family: Arial, Helvetica, sans-serif;}
-	input[type=text], input[type=date] 
-	{
-	  width: 100%;
-	  padding: 12px 20px;
-	  margin: 8px 0;
-	  display: inline-block;
-	  border: 1px solid #ccc;
-	  box-sizing: border-box;
+<style> 
+    input[type=text], input[type=date]
+
+    body{
+		width:100%;
+		height:700px;
+		margin:0;
+        align-content:center;
 	}
 
-	.options
+	#contents > div
 	{
-	  border: 2px solid black; 
-	  font-size: 18px;
-	  padding: 14px 20px;
-	  margin: center;
-	  border: none;
-	  cursor: pointer;
-	  width: 100%;
-	  text-align: center
+		width:500px;
+		margin:auto;
+		margin-top:5%;
+        text-align: center;
+        align-content: center;
 	}
 
+	#view,#create 
+	{
+		width:100%;
+		height:250px;
+	}
+
+	#view{height:$height;} 
 	
+	#create{height:$height / 2;}
 
-	.container 
+	#buttons
 	{
-	  padding: 16px;
+		height:65px;
 	}
 
-	span.psw 
+	#buttons > button 
 	{
-	  float: right;
-	  padding-top: 16px;
+		width:49.95%;
+		float:left;
+		color: black;
+		text-align:center;
+		height:75%;
+		margin:0;
+
 	}
 
-	h1
+	#buttons > button:hover
 	{
-		text-align: center;
+		background:white;
+		cursor:pointer;
 	}
+		
+	#view > input, #create > button
+	{
+		margin-top:20px;
+		height:25px;
+	}
+		
+	#save
+    {
+        margin-top: 20px;
+        width: 10%;
+    }
+		
+    #edit,#calendar
+    {
+        margin-top:20px;
+        width:25%;
+        align-content:center
+    }
+
+    #name,#location,#date,#desc
+    {
+        height:15%;
+        width:100%;
+    }
 
 </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
@@ -59,20 +92,10 @@
 <body>
     <!-- this is where our component will appear -->
    
- 
-    <div id="contents"></div>
-	<div class="container">
-		<div class="userimage"></div>
-    	<div id="eventinfo"></div>
-    	
-    	<div class="options">
-		    <div id="eventbuttons" style="text-align: center"></div>
-            <div id="elocation" style="text-align: center"></div>
-            <div id="edescription" style="text-align: center"></div>
-            <div id="einvitelist" style="text-align: center"></div>
-		
-        </div>
-	</div>
+   <h1 style="text-align: center">Events</h1>
+   <br>
+             <div id="contents"></div>
+        
 
    
     <script src="/App03.js"></script>
@@ -81,4 +104,3 @@
 </body>
 
 </html>
-
