--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -97,7 +97,7 @@
 <body>
     <!-- this is where our component will appear -->
    
-   <h1 style="text-align: center">Welcome to Trippin</h1>
+   <h1 style="font-family:blackletter; font-size: 200%; text-align: center">Welcome to</h1> <h1 style="font-family: cursive; font-size: 600%;text-align: center">Trippin</h1>
    <br>
 		<div class="userimage"></div>
     		 <div id="contents"></div>
@@ -113,5 +113,4 @@
 </body>
 
 </html>
-
 
