--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -2,88 +2,10 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="./view01.css"> </style>
     <meta charset="UTF-8" />
     <title>Trippin Login</title>
-<style>	
-	input[type=text], input[type=password] 
 
-	body{
-		width:100%;
-		height:700px;
-		margin:0;
-	}
-
-	#contents > div
-	{
-		width:500px;
-		margin:auto;
-		margin-top:5%;
-	}
-
-	#signup,#login 
-	{
-		width:100%;
-		height:250px;
-		
-	}
-
-	#signup{height:$height;} 
-	
-	#login{height:$height / 2;}
-
-	#buttons
-	{
-		height:65px;
-	}
-
-	#buttons > button 
-	{
-		width:49.95%;
-		float:left;
-		color: black;
-		text-align:center;
-		height:75%;
-		margin:0;
-
-	}
-
-	#buttons > button:hover
-	{
-		background:white;
-		cursor:pointer;
-	}
-		
-	#signup > input, #signup > button
-	{
-		margin-top:20px;
-		margin-left:105px;
-		height:25px;
-	}
-		
-	#name,#email, #confirm, #password
-	{
-		width:250px;
-	}
-		
-	#login > #email,#login > #password,#login >button
-	{
-		width:250px;
-		margin-left:125px;
-		margin-top:20px;
-		height:25px;
-	}
-
-	.userimage
-	{
-	    background-color: #fff;
-	    border: 2px solid black;    
-	    width: 150px;
-	    height: 150px;
-	    border-radius: 50%; 
-	    margin: auto;
-	    text-align: center;
-
-	}
 
 </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
