--- a/project-template/static/view01.html
+++ b/project-template/static/view01.html
@@ -19,12 +19,11 @@
 <body>
     <!-- this is where our component will appear -->
    
-   <h1 style="font-family:blackletter; font-size: 200%; text-align: center">Welcome to</h1> <h1 style="font-family: cursive; font-size: 600%;text-align: center">Trippin</h1>
-   <br>
-		<div class="userimage"></div>
-    		 <div id="contents"></div>
-    	
 
+   		<h1 class="name">Trippin</h1>
+   <br>
+    <div id="contents"></div>
+    <br>
    
     <script src="/App01.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
