Created form for event

--- a/project-template/static/view03.html
+++ b/project-template/static/view03.html
@@ -2,109 +2,9 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="./view03.css"> </style>
     <meta charset="UTF-8" />
     <title>Create Event</title>
-<style> 
-    input[type=text], input[type=date]
-
-    body{
-		width:100%;
-		height:700px;
-		margin:0;
-        align-content:center;
-	}
-
-	#contents > div
-	{
-		width:500px;
-		margin:auto;
-		margin-top:5%;
-        text-align: center;
-        align-content: center;
-	}
-
-	#view,#create 
-	{
-		width:100%;
-		height:250px;
-	}
-
-	#view{height:$height;} 
-	
-	#create{height:$height / 2;}
-
-	#buttons
-	{
-		height:65px;
-	}
-
-	#buttons > button 
-	{
-		width:50%;
-		float:left;
-		color: black;
-		text-align:center;
-		height:75%;
-		margin:0;
-
-	}
-
-	#buttons > button:hover
-	{
-		background:white;
-		cursor:pointer;
-	}
-		
-	#view > input, #create > button
-	{
-		margin-top:20px;
-		height:25px;
-	}
-		
-	#save
-    {
-        margin-top: 20px;
-        width: 10%;
-    }
-		
-    #edit,#calendar
-    {
-        margin-top:20px;
-        width:25%;
-        align-content:center
-    }
-
-    	#name,#location,#eventDate,#desc,#attendee
-    {
-        height:15%;
-        width:100%;
-    }
-
-      #data
-    {
-    	list-style-type: none;
-    	text-align: center;
-    }
-   
-
-     #column 
-	{
-    	float: left;
-    	padding: 10px;
-    	
-	}
-	#left, #right 
-	{
-  		width: 50%;
-	}
-
-	#row:after 
-	{
-    	content: "";
-    	clear: both;
-	}
-
-</style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js">
     </script>
