--- a/project-template/static/view05.html
+++ b/project-template/static/view05.html
@@ -24,6 +24,11 @@
 
     calendar.render();
   });
+
+  <div className="form-group">
+                          <label for="inlineFormInputName">Event Name</label>
+                          <input type="text" className="form-control" id="inlineFormInputName" placeholder="Event Name" />
+                        </div>
 */
 
 </script>
