--- a/project-template/static/view02.html
+++ b/project-template/static/view02.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>View 02</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="./styles.css"> </style>
+	<link rel="stylesheet" type="text/css" href="./css/view02.css"> </style>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"> </script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
