--- a/project-template/static/view04.html
+++ b/project-template/static/view04.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="./css/view01.css"> </style>
+	<link rel="stylesheet" type="text/css" href="./css/view03.css"> </style>
     <meta charset="UTF-8" />
     <title>Trippin Login</title>
 
-
+<div class="contents"></div>
 </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js">
@@ -19,11 +19,8 @@
 <body>
     <!-- this is where our component will appear -->
    
-
-   		<h1 class="name">Trippin</h1>
-   <br>
     <div id="contents"></div>
-    <br>
+
    
     <script src="/App04.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
