--- a/project-template/static/view04.html
+++ b/project-template/static/view04.html
@@ -13,13 +13,20 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js">
     </script>
+    <style>
+        .navbar 
+{
+    background-color: #e3f2fd;
+}
+    </style>
 </head>
 
 
 <body>
     <!-- this is where our component will appear -->
-   
-    <div id="contents"></div>
+    
+    <div id="search"></div>
+     <div id="contents"></div>
 
    
     <script src="/App04.js"></script>
