--- a/project-template/static/view03.html
+++ b/project-template/static/view03.html
@@ -16,9 +16,8 @@
 <body>
     <!-- this is where our component will appear -->
    
-   <h1 style="text-align: center">Events</h1>
-   <br>
-             <div id="contents"></div>
+   <div id="search"></div>
+       <div id="contents"></div>
         
 
    
