--- a/project-template/static/view03.html
+++ b/project-template/static/view03.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/view03.css"> </style>
     <meta charset="UTF-8" />
-    <title>Create Event</title>
+    <title>Events</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js">
     </script>
